<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">AutoAndromeda</string>

  <string name="is_rooted_yes">Rooted!</string>
  <string name="is_rooted_no">Not rooted :(</string>

  <string name="is_substratum_installed_yes">Substratum is installed!</string>
  <string name="is_substratum_installed_no">Substratum needs to be installed for this app to do anything.</string>

  <string name="is_andromeda_installed_yes">Andromeda is installed!</string>
  <string name="is_andromeda_installed_no">Andromeda needs to be installed for this app to do anything.</string>

  <string name="install">Install</string>
  <string name="help">Help</string>


  <string name="not_good_to_go_justification">You have to make sure the above 3 conditions are met before AutoAndromeda can run</string>
  <string name="good_to_go">AutoAndromeda is good to go, and will bind Andromeda automatically on reboot.</string>

  <string name="debug">Show Debugging Info</string>

  <string name="debug_success_yes">AutoAndromeda success on last boot: Yes!</string>
  <string name="debug_success_no">AutoAndromeda success on last boot: No :(</string>
</resources>
